--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,8 @@ services:
   - type: web
     name: dev-challenge
     runtime: python
+    buildCommand: pip install -r requirements.txt
+    startCommand: uvicorn challenge.api:app --host 0.0.0.0 --port 10000
     envVars:
       - key: PYTHON_VERSION
         value: "3.10.12"
