--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: dev-challenge
     runtime: python
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn challenge.api:app --host 0.0.0.0 --port 10000
+    startCommand: uvicorn challenge.api:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: "3.10.12"
